# Vector_Slicer_GCode

./: CMakeLists.txt  README.md  main.cpp
paths/: azimuthal_05_cm.csv  azimuthal_1_cm.csv  azimuthal_1_cm_square.csv  azimuthal_2_cm.csv  cylinder_r_inner_10_mm.csv  cylinder_r_inner_5_mm.csv  diagonal_1x05_cm.csv  diagonal_2x1_cm.csv  evertor_r_inner_10_mm.csv  evertor_r_inner_10_mm_40.csv  evertor_r_inner_10_mm_45.csv  evertor_r_inner_10_mm_50.csv  evertor_r_inner_5_mm.csv  fan_asymmetric_negative_15x1_cm.csv  fan_asymmetric_negative_25x1_cm.csv  fan_asymmetric_negative_3_1_cm.csv  fan_asymmetric_negative_3x1_cm.csv  fan_asymmetric_negative_3x2_cm.csv  fan_asymmetric_negative_4_1_cm.csv  fan_asymmetric_negative_4x1_cm.csv  fan_asymmetric_negative_5x2_cm.csv  fan_asymmetric_positive_15x1_cm.csv  fan_asymmetric_positive_25x1_cm.csv  fan_asymmetric_positive_3_1_cm.csv  fan_asymmetric_positive_3x1_cm.csv  fan_asymmetric_positive_3x2_cm.csv  fan_asymmetric_positive_4_1_cm.csv  fan_asymmetric_positive_4x1_cm.csv  fan_asymmetric_positive_5x2_cm.csv  fan_gripper_12x48mm.csv  fan_gripper_12x48mm_TN_first.csv  fan_gripper_12x48mm_TN_second.csv  fan_gripper_12x48mm_asymmetric_negative.csv  fan_gripper_12x48mm_weak_twisted_nematic.csv  fan_gripper_6x24mm.csv  fan_gripper_8x48mm_weak_negative.csv  fan_gripper_8x48mm_weak_positive.csv  fan_symmetric_negative_15x1_cm.csv  fan_symmetric_negative_25x1_cm.csv  fan_symmetric_negative_3_1_cm.csv  (+28 more)
patterns/azimuthal, r = 1 cm/: x_best_paths.csv  y_best_paths.csv
patterns/diagonal, 1x0.5 cm/: x_best_paths.csv  y_best_paths.csv
patterns/diagonal, 2x1 cm/: x_best_paths.csv
patterns/diagonal, 2x1 cm/results/: y_best_paths.csv
patterns/gcode/: diagonal, 1x0.5 cm.gcode  diagonal, 2x1 cm.gcode  radial, r = 0.5 cm.gcode  radial, r = 1 cm.gcode
patterns/linear, 1x0.5 cm/: x_best_paths.csv  y_best_paths.csv
patterns/linear, 2x1 cm/: x_best_paths.csv  y_best_paths.csv
patterns/radial, r = 0.5 cm/results/: xField.csv  x_best_paths.csv  yField.csv  y_best_paths.csv
patterns/radial, r = 1 cm/: x_best_paths.csv  y_best_paths.csv
patterns/radial, r = 1 cm/results/: y_best_paths.csv
patterns/symmetric gauss curved rectangle/: x_best_paths.csv  y_best_paths.csv
patterns/symmetricPositive, 2x0.6 cm/: x_best_paths.csv  y_best_paths.csv
source/engine/: Exporting.cpp  Exporting.h  GCodeFile.cpp  GCodeFile.h  Hyrel.cpp  Hyrel.h  PatternBoundaries.cpp  PatternBoundaries.h  ValarrayOperations.cpp  ValarrayOperations.h  auxiliary.cpp  auxiliary.h  config.h.in  exporting.cpp  exporting.h  extrusion_configuration.cpp  extrusion_configuration.h  full_printing_configuration.cpp  full_printing_configuration.h  gcode_file.cpp  gcode_file.h  hyrel.cpp  hyrel.h  importing.cpp  importing.h  pattern_boundaries.cpp  pattern_boundaries.h  printer_configuration.cpp  printer_configuration.h  valarray_operations.cpp  valarray_operations.h
